--- a/css/estilos.css
+++ b/css/estilos.css
@@ -97,4 +97,6 @@ p{
     /*margin: 200px 50px 200px 100px;*/
     margin: auto;
     padding: 110px;
+    font-weight: bold;
+    filter: opacity(1);
 }
